@@ -2,12 +2,12 @@
 #Released under the MIT License <http://opensource.org/licenses/MIT>
 
 from __future__ import division
+from math import pi as _pi, fabs as _fabs, sin as _sin, cos as _cos, ceil as _ceil
 from java.awt.image import BufferedImage, AffineTransformOp
 from java.awt import RenderingHints
 from java.awt.geom import AffineTransform
 from java.lang import IllegalArgumentException
-import math
-from surface import Surface
+from pyj2d.surface import Surface
 
 __docformat__ = 'restructuredtext'
 
@@ -30,7 +30,7 @@ class Transform(object):
 
         Module initialization creates pyj2d.transform instance.
         """
-        self.deg_rad = math.pi/180
+        self.deg_rad = _pi/180
 
     def rotate(self, surface, angle):
         """
@@ -41,8 +41,8 @@ class Transform(object):
         theta = angle*self.deg_rad
         width_i = surface.getWidth()
         height_i = surface.getHeight()
-        cos_theta = math.fabs( math.cos(theta) )
-        sin_theta = math.fabs( math.sin(theta) )
+        cos_theta = _fabs( _cos(theta) )
+        sin_theta = _fabs( _sin(theta) )
         width_f = int( (width_i*cos_theta)+(height_i*sin_theta) )
         height_f = int( (width_i*sin_theta)+(height_i*cos_theta) )
         surf = Surface((width_f,height_f), BufferedImage.TYPE_INT_ARGB)
@@ -69,12 +69,12 @@ class Transform(object):
         theta = angle*self.deg_rad
         width_i = int(surface.getWidth()*size)
         height_i = int(surface.getHeight()*size)
-        cos_theta = math.fabs( math.cos(theta) )
-        sin_theta = math.fabs( math.sin(theta) )
-        width_f = int( math.ceil((width_i*cos_theta)+(height_i*sin_theta)) )
+        cos_theta = _fabs( _cos(theta) )
+        sin_theta = _fabs( _sin(theta) )
+        width_f = int( _ceil((width_i*cos_theta)+(height_i*sin_theta)) )
         if width_f % 2:
             width_f += 1
-        height_f = int( math.ceil((width_i*sin_theta)+(height_i*cos_theta)) )
+        height_f = int( _ceil((width_i*sin_theta)+(height_i*cos_theta)) )
         if height_f % 2:
             height_f += 1
         surf = Surface((width_f,height_f), BufferedImage.TYPE_INT_ARGB)
