@@ -14,6 +14,7 @@
 -add util timer for profiling.
 -update draw arc with dimension adjustment.
 -update time clock for accuracy.
+-revise with absolute import statements.
 
 0.27    2015-04-12
 -update font to enhance fonts access.
